Updates to Target Page & New Page - Beneficiary

--- a/target.html
+++ b/target.html
@@ -69,6 +69,17 @@
                             <div class="row">
                             <div class="offset-md-1 col-md-10">
                                     <form class="blockquote flex-column rounded-sm pt-4 shadow-sm" >
+                                        <div class="row col-md-12">
+                                                <div class="alert alert-success w-100" role="alert">
+                                                This is a success alert—check it out!
+                                                </div>
+                                                <div class="alert alert-danger w-100" role="alert">
+                                                This is a danger alert—check it out!
+                                                </div>
+                                                <div class="alert alert-warning w-100" role="alert">
+                                                This is a warning alert—check it out!
+                                                </div>
+                                        </div>
                                             <div class="row mt-0 mb-2">
                                                 <h1 class="pl-3 lead welcome-title font-weight-bold">New Target Investment</h1>
                                                 <div class="form-group col-md-12 mb-4">
